src/qt/libqwidget.bf

public struct QWidget : QPaintDevice
{
	[LinkName("QWidget_new")]
	public static extern QWidget* QWidget_new(QWidget* parent);
	[LinkName("QWidget_new2")]
	public static extern QWidget* QWidget_new2();
	[LinkName("QWidget_new3")]
	public static extern QWidget* QWidget_new3(QWidget* parent, int64 f);
	[LinkName("QWidget_MetaObject")]
	public static extern QMetaObject* QWidget_MetaObject(Self* c_this);
	[LinkName("QWidget_Metacast")]
	public static extern void* QWidget_Metacast(Self* c_this, char8[] param1);
	[LinkName("QWidget_Metacall")]
	public static extern int32 QWidget_Metacall(Self* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QWidget_Tr")]
	public static extern libqt_string QWidget_Tr(char8[] s);
	[LinkName("QWidget_DevType")]
	public static extern int32 QWidget_DevType(Self* c_this);
	[LinkName("QWidget_WinId")]
	public static extern c_uintptr QWidget_WinId(Self* c_this);
	[LinkName("QWidget_CreateWinId")]
	public static extern void QWidget_CreateWinId(Self* c_this);
	[LinkName("QWidget_InternalWinId")]
	public static extern c_uintptr QWidget_InternalWinId(Self* c_this);
	[LinkName("QWidget_EffectiveWinId")]
	public static extern c_uintptr QWidget_EffectiveWinId(Self* c_this);
	[LinkName("QWidget_Style")]
	public static extern QStyle* QWidget_Style(Self* c_this);
	[LinkName("QWidget_SetStyle")]
	public static extern void QWidget_SetStyle(Self* c_this, QStyle* style);
	[LinkName("QWidget_IsTopLevel")]
	public static extern bool QWidget_IsTopLevel(Self* c_this);
	[LinkName("QWidget_IsWindow")]
	public static extern bool QWidget_IsWindow(Self* c_this);
	[LinkName("QWidget_IsModal")]
	public static extern bool QWidget_IsModal(Self* c_this);
	[LinkName("QWidget_WindowModality")]
	public static extern int64 QWidget_WindowModality(Self* c_this);
	[LinkName("QWidget_SetWindowModality")]
	public static extern void QWidget_SetWindowModality(Self* c_this, int64 windowModality);
	[LinkName("QWidget_IsEnabled")]
	public static extern bool QWidget_IsEnabled(Self* c_this);
	[LinkName("QWidget_IsEnabledTo")]
	public static extern bool QWidget_IsEnabledTo(Self* c_this, QWidget* param1);
	[LinkName("QWidget_SetEnabled")]
	public static extern void QWidget_SetEnabled(Self* c_this, bool enabled);
	[LinkName("QWidget_SetDisabled")]
	public static extern void QWidget_SetDisabled(Self* c_this, bool disabled);
	[LinkName("QWidget_SetWindowModified")]
	public static extern void QWidget_SetWindowModified(Self* c_this, bool windowModified);
	[LinkName("QWidget_FrameGeometry")]
	public static extern QRect QWidget_FrameGeometry(Self* c_this);
	[LinkName("QWidget_Geometry")]
	public static extern QRect* QWidget_Geometry(Self* c_this);
	[LinkName("QWidget_NormalGeometry")]
	public static extern QRect QWidget_NormalGeometry(Self* c_this);
	[LinkName("QWidget_X")]
	public static extern int32 QWidget_X(Self* c_this);
	[LinkName("QWidget_Y")]
	public static extern int32 QWidget_Y(Self* c_this);
	[LinkName("QWidget_Pos")]
	public static extern QPoint QWidget_Pos(Self* c_this);
	[LinkName("QWidget_FrameSize")]
	public static extern QSize QWidget_FrameSize(Self* c_this);
	[LinkName("QWidget_Size")]
	public static extern QSize QWidget_Size(Self* c_this);
	[LinkName("QWidget_Width")]
	public static extern int32 QWidget_Width(Self* c_this);
	[LinkName("QWidget_Height")]
	public static extern int32 QWidget_Height(Self* c_this);
	[LinkName("QWidget_Rect")]
	public static extern QRect QWidget_Rect(Self* c_this);
	[LinkName("QWidget_ChildrenRect")]
	public static extern QRect QWidget_ChildrenRect(Self* c_this);
	[LinkName("QWidget_ChildrenRegion")]
	public static extern QRegion QWidget_ChildrenRegion(Self* c_this);
	[LinkName("QWidget_MinimumSize")]
	public static extern QSize QWidget_MinimumSize(Self* c_this);
	[LinkName("QWidget_MaximumSize")]
	public static extern QSize QWidget_MaximumSize(Self* c_this);
	[LinkName("QWidget_MinimumWidth")]
	public static extern int32 QWidget_MinimumWidth(Self* c_this);
	[LinkName("QWidget_MinimumHeight")]
	public static extern int32 QWidget_MinimumHeight(Self* c_this);
	[LinkName("QWidget_MaximumWidth")]
	public static extern int32 QWidget_MaximumWidth(Self* c_this);
	[LinkName("QWidget_MaximumHeight")]
	public static extern int32 QWidget_MaximumHeight(Self* c_this);
	[LinkName("QWidget_SetMinimumSize")]
	public static extern void QWidget_SetMinimumSize(Self* c_this, QSize* minimumSize);
	[LinkName("QWidget_SetMinimumSize2")]
	public static extern void QWidget_SetMinimumSize2(Self* c_this, int32 minw, int32 minh);
	[LinkName("QWidget_SetMaximumSize")]
	public static extern void QWidget_SetMaximumSize(Self* c_this, QSize* maximumSize);
	[LinkName("QWidget_SetMaximumSize2")]
	public static extern void QWidget_SetMaximumSize2(Self* c_this, int32 maxw, int32 maxh);
	[LinkName("QWidget_SetMinimumWidth")]
	public static extern void QWidget_SetMinimumWidth(Self* c_this, int32 minw);
	[LinkName("QWidget_SetMinimumHeight")]
	public static extern void QWidget_SetMinimumHeight(Self* c_this, int32 minh);
	[LinkName("QWidget_SetMaximumWidth")]
	public static extern void QWidget_SetMaximumWidth(Self* c_this, int32 maxw);
	[LinkName("QWidget_SetMaximumHeight")]
	public static extern void QWidget_SetMaximumHeight(Self* c_this, int32 maxh);
	[LinkName("QWidget_SizeIncrement")]
	public static extern QSize QWidget_SizeIncrement(Self* c_this);
	[LinkName("QWidget_SetSizeIncrement")]
	public static extern void QWidget_SetSizeIncrement(Self* c_this, QSize* sizeIncrement);
	[LinkName("QWidget_SetSizeIncrement2")]
	public static extern void QWidget_SetSizeIncrement2(Self* c_this, int32 w, int32 h);
	[LinkName("QWidget_BaseSize")]
	public static extern QSize QWidget_BaseSize(Self* c_this);
	[LinkName("QWidget_SetBaseSize")]
	public static extern void QWidget_SetBaseSize(Self* c_this, QSize* baseSize);
	[LinkName("QWidget_SetBaseSize2")]
	public static extern void QWidget_SetBaseSize2(Self* c_this, int32 basew, int32 baseh);
	[LinkName("QWidget_SetFixedSize")]
	public static extern void QWidget_SetFixedSize(Self* c_this, QSize* fixedSize);
	[LinkName("QWidget_SetFixedSize2")]
	public static extern void QWidget_SetFixedSize2(Self* c_this, int32 w, int32 h);
	[LinkName("QWidget_SetFixedWidth")]
	public static extern void QWidget_SetFixedWidth(Self* c_this, int32 w);
	[LinkName("QWidget_SetFixedHeight")]
	public static extern void QWidget_SetFixedHeight(Self* c_this, int32 h);
	[LinkName("QWidget_MapToGlobal")]
	public static extern QPointF QWidget_MapToGlobal(Self* c_this, QPointF* param1);
	[LinkName("QWidget_MapToGlobalWithQPoint")]
	public static extern QPoint QWidget_MapToGlobalWithQPoint(Self* c_this, QPoint* param1);
	[LinkName("QWidget_MapFromGlobal")]
	public static extern QPointF QWidget_MapFromGlobal(Self* c_this, QPointF* param1);
	[LinkName("QWidget_MapFromGlobalWithQPoint")]
	public static extern QPoint QWidget_MapFromGlobalWithQPoint(Self* c_this, QPoint* param1);
	[LinkName("QWidget_MapToParent")]
	public static extern QPointF QWidget_MapToParent(Self* c_this, QPointF* param1);
	[LinkName("QWidget_MapToParentWithQPoint")]
	public static extern QPoint QWidget_MapToParentWithQPoint(Self* c_this, QPoint* param1);
	[LinkName("QWidget_MapFromParent")]
	public static extern QPointF QWidget_MapFromParent(Self* c_this, QPointF* param1);
	[LinkName("QWidget_MapFromParentWithQPoint")]
	public static extern QPoint QWidget_MapFromParentWithQPoint(Self* c_this, QPoint* param1);
	[LinkName("QWidget_MapTo")]
	public static extern QPointF QWidget_MapTo(Self* c_this, QWidget* param1, QPointF* param2);
	[LinkName("QWidget_MapTo2")]
	public static extern QPoint QWidget_MapTo2(Self* c_this, QWidget* param1, QPoint* param2);
	[LinkName("QWidget_MapFrom")]
	public static extern QPointF QWidget_MapFrom(Self* c_this, QWidget* param1, QPointF* param2);
	[LinkName("QWidget_MapFrom2")]
	public static extern QPoint QWidget_MapFrom2(Self* c_this, QWidget* param1, QPoint* param2);
	[LinkName("QWidget_Window")]
	public static extern QWidget* QWidget_Window(Self* c_this);
	[LinkName("QWidget_NativeParentWidget")]
	public static extern QWidget* QWidget_NativeParentWidget(Self* c_this);
	[LinkName("QWidget_TopLevelWidget")]
	public static extern QWidget* QWidget_TopLevelWidget(Self* c_this);
	[LinkName("QWidget_Palette")]
	public static extern QPalette* QWidget_Palette(Self* c_this);
	[LinkName("QWidget_SetPalette")]
	public static extern void QWidget_SetPalette(Self* c_this, QPalette* palette);
	[LinkName("QWidget_SetBackgroundRole")]
	public static extern void QWidget_SetBackgroundRole(Self* c_this, int64 backgroundRole);
	[LinkName("QWidget_BackgroundRole")]
	public static extern int64 QWidget_BackgroundRole(Self* c_this);
	[LinkName("QWidget_SetForegroundRole")]
	public static extern void QWidget_SetForegroundRole(Self* c_this, int64 foregroundRole);
	[LinkName("QWidget_ForegroundRole")]
	public static extern int64 QWidget_ForegroundRole(Self* c_this);
	[LinkName("QWidget_Font")]
	public static extern QFont* QWidget_Font(Self* c_this);
	[LinkName("QWidget_SetFont")]
	public static extern void QWidget_SetFont(Self* c_this, QFont* font);
	[LinkName("QWidget_FontMetrics")]
	public static extern QFontMetrics QWidget_FontMetrics(Self* c_this);
	[LinkName("QWidget_FontInfo")]
	public static extern QFontInfo QWidget_FontInfo(Self* c_this);
	[LinkName("QWidget_Cursor")]
	public static extern QCursor QWidget_Cursor(Self* c_this);
	[LinkName("QWidget_SetCursor")]
	public static extern void QWidget_SetCursor(Self* c_this, QCursor* cursor);
	[LinkName("QWidget_UnsetCursor")]
	public static extern void QWidget_UnsetCursor(Self* c_this);
	[LinkName("QWidget_SetMouseTracking")]
	public static extern void QWidget_SetMouseTracking(Self* c_this, bool enable);
	[LinkName("QWidget_HasMouseTracking")]
	public static extern bool QWidget_HasMouseTracking(Self* c_this);
	[LinkName("QWidget_UnderMouse")]
	public static extern bool QWidget_UnderMouse(Self* c_this);
	[LinkName("QWidget_SetTabletTracking")]
	public static extern void QWidget_SetTabletTracking(Self* c_this, bool enable);
	[LinkName("QWidget_HasTabletTracking")]
	public static extern bool QWidget_HasTabletTracking(Self* c_this);
	[LinkName("QWidget_SetMask")]
	public static extern void QWidget_SetMask(Self* c_this, QBitmap* mask);
	[LinkName("QWidget_SetMaskWithMask")]
	public static extern void QWidget_SetMaskWithMask(Self* c_this, QRegion* mask);
	[LinkName("QWidget_Mask")]
	public static extern QRegion QWidget_Mask(Self* c_this);
	[LinkName("QWidget_ClearMask")]
	public static extern void QWidget_ClearMask(Self* c_this);
	[LinkName("QWidget_Render")]
	public static extern void QWidget_Render(Self* c_this, QPaintDevice* target);
	[LinkName("QWidget_RenderWithPainter")]
	public static extern void QWidget_RenderWithPainter(Self* c_this, QPainter* painter);
	[LinkName("QWidget_Grab")]
	public static extern QPixmap QWidget_Grab(Self* c_this);
	[LinkName("QWidget_GraphicsEffect")]
	public static extern QGraphicsEffect* QWidget_GraphicsEffect(Self* c_this);
	[LinkName("QWidget_SetGraphicsEffect")]
	public static extern void QWidget_SetGraphicsEffect(Self* c_this, QGraphicsEffect* effect);
	[LinkName("QWidget_GrabGesture")]
	public static extern void QWidget_GrabGesture(Self* c_this, int64 typeVal);
	[LinkName("QWidget_UngrabGesture")]
	public static extern void QWidget_UngrabGesture(Self* c_this, int64 typeVal);
	[LinkName("QWidget_SetWindowTitle")]
	public static extern void QWidget_SetWindowTitle(Self* c_this, libqt_string windowTitle);
	[LinkName("QWidget_SetStyleSheet")]
	public static extern void QWidget_SetStyleSheet(Self* c_this, libqt_string styleSheet);
	[LinkName("QWidget_StyleSheet")]
	public static extern libqt_string QWidget_StyleSheet(Self* c_this);
	[LinkName("QWidget_WindowTitle")]
	public static extern libqt_string QWidget_WindowTitle(Self* c_this);
	[LinkName("QWidget_SetWindowIcon")]
	public static extern void QWidget_SetWindowIcon(Self* c_this, QIcon* icon);
